testsuite/tests/ghc-regress/typecheck/should_fail/tcfail079.stderr

tcfail079.hs:9:
    Kind error: Expecting a lifted type, but `Int#' is unlifted
    In the newtype declaration for `Unboxed'
